--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,5 @@
-*.log
-*.sh
-.DS_Store
-dist
-data.py
-*.txt
-*.xml
-*.yml
-*__pycache__
-media/cache/
-.idea
-venv/
-.venv/
 .env
+venv
+*\__pycache__
+\media
+\static
