fix: update settings, placeholders, slider, and .gitignore; replace DB with cached version

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,17 @@
+*.log
+*.sh
+.DS_Store
+dist
+data.py
+*.txt
+*.xml
+*.yml
+*__pycache__
+media/cache/
+.idea
+venv/
+.venv/
 .env
-venv
 *\__pycache__
 \media
 \static
